--- a/gradle.properties
+++ b/gradle.properties
@@ -21,9 +21,9 @@ fabric_version=0.89.0+1.20.1
 fabric_loader_version=0.14.21
 
 # Mod options
-mod_name=ExampleMod
-mod_author=Jared
-mod_id=examplemod
+mod_name=HunterVsSpeedrunnerSculk
+mod_author=Tfarcenim
+mod_id=huntervsspeedrunnersculk
 license=C0-1.0
 description=The description of your mod. \nAccepts multilines.
 
