--- a/gradle.properties
+++ b/gradle.properties
@@ -27,6 +27,9 @@ mod_id=speedrunnervshuntersculk
 license=C0-1.0
 description=The description of your mod. \nAccepts multilines.
 
+#Other mods
+reach_attribute=2.4.0
+
 # Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
