--- a/gradle.properties
+++ b/gradle.properties
@@ -29,6 +29,7 @@ description=The description of your mod. \nAccepts multilines.
 
 #Other mods
 reach_attribute=2.4.0
+cca_version=5.2.2
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
