--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@
 # Every field you add must be added to the root build.gradle expandProps map.
 
 # Project
-version=1.0.0
-group=com.example.examplemod
+version=0
+group=tfar
 
 # Common
 minecraft_version=1.20.1
@@ -21,11 +21,11 @@ fabric_version=0.89.0+1.20.1
 fabric_loader_version=0.14.21
 
 # Mod options
-mod_name=HunterVsSpeedrunnerSculk
+mod_name=SpeedrunnerVsHunterSculk
 mod_author=Tfarcenim
 mod_id=speedrunnervshuntersculk
 license=C0-1.0
-description=The description of your mod. \nAccepts multilines.
+description=Speedrunner vs hunter but sculk.
 
 #Other mods
 reach_attribute=2.4.0
